--- a/package.json
+++ b/package.json
@@ -12,9 +12,15 @@
     "@adonisjs/assembler": "^5.3.0",
     "@symfony/webpack-encore": "^1.4.0",
     "adonis-preset-ts": "^2.1.0",
+    "autoprefixer": "^10.4.2",
     "eslint": "^7.27.0",
     "eslint-plugin-adonis": "^1.3.1",
     "pino-pretty": "^5.0.2",
+    "postcss": "^8.4.5",
+    "postcss-loader": "^5.3.0",
+    "sass": "^1.49.0",
+    "sass-loader": "^11.0.0",
+    "tailwindcss": "^3.0.18",
     "typescript": "~4.2",
     "youch": "^2.2.2",
     "youch-terminal": "^1.1.1"
@@ -26,6 +32,12 @@
     "@adonisjs/shield": "^7.0.2",
     "@adonisjs/view": "^6.0.2",
     "@snowdog/front-end-recruitment-test-submodule": "^1.0.0",
+    "credit-card-type": "^9.1.0",
+    "creditcards-types": "^3.2.0",
+    "css-only-tooltip": "^1.1.2",
+    "final-form": "^4.20.6",
+    "imask": "^6.3.0-alpha.0",
+    "notyf": "^3.10.0",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19"
